[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 757.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04
alignment = 1

[node name="Mail" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 505.0
margin_bottom = 225.0
size_flags_vertical = 0
text = "Mail"
autowrap = true

[node name="MailInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 505.0
margin_bottom = 253.0

[node name="Password" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 257.0
margin_right = 505.0
margin_bottom = 288.0
size_flags_vertical = 0
text = "
Password"
autowrap = true

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 505.0
margin_bottom = 316.0
secret = true

[node name="Login" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 505.0
margin_bottom = 340.0
text = "Login"

[node name="Log" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 505.0
margin_bottom = 375.0
size_flags_vertical = 0
text = "
"
autowrap = true

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Login" to="." method="_on_Login_pressed"]
